# trade-bot-ml-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  grpc_diagnostics.py  logging_setup.py  main.py
app/backtesting/: backtest_engine.py  metrics_calculator.py
app/data/: preprocessor.py
app/data/ingestion/: broker_fetcher.py  fii_dii_fetcher.py  news_fetcher.py  vix_fetcher.py
app/data/live_ticks/: __init__.py  buffer.py
app/data/storage/: db.py  redis_cache.py
app/features/: feature_pipeline.py  macro_features.py  options_features.py  sentiment_features.py  technical.py
app/grpc_server/: live_tick_buffer.py  prediction_servicer.py  proto_market.py  server.py
app/inference/: active_model_store.py  calibration.py  checklist.py  gemini_predictor.py  ohlcv_fingerprint.py  openai_predictor.py  prediction_cache.py  predictor.py
app/models/: base.py
app/models/classical_ml/: lightgbm_model.py  xgboost_model.py
app/models/deep_learning/: lstm_model.py
app/models/ensemble/: stacking_ensemble.py
app/models/statistical/: arima_model.py  garch_model.py
app/registry/: model_registry.py
app/scheduler/: celery_config.py  tasks.py
app/training/: prepared_data.py  trainer.py
protos/: prediction_service.proto
scripts/: grpc_smoke_client.py  prepare_training_data.py  train_models.py
tests/test_features/: test_technical.py
tests/test_grpc/: test_proto_market.py
tests/test_inference/: test_calibration.py  test_calibration_keyed.py  test_data_quality_and_prompt.py  test_parameter_toggles.py  test_policy_layers.py  test_trend_detector.py
tests/test_models/: test_garch.py
