[tool.poetry]
name = "sensex-ml-service"
version = "0.1.0"
description = "Sensex Options Trading ML Prediction Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# API + gRPC
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
grpcio = "^1.63.0"
grpcio-tools = "^1.63.0"
protobuf = "^5.26.0"

# Database
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
redis = "^5.0.0"

# Data + Feature Engineering
pandas = "^2.2.0"
numpy = "^1.26.0"
ta = "^0.11.0"
yfinance = "^0.2.50"
urllib3 = ">=1.26.18,<2.0.0"
certifi = ">=2024.2.2"

# Statistical Models
arch = "^7.0.0"
statsmodels = "^0.14.0"

# Classical ML
xgboost = "^2.0.0"
lightgbm = "^4.3.0"
scikit-learn = "^1.4.0"
optuna = "^3.6.0"

# Deep Learning
torch = "^2.3.0"
pytorch-lightning = "^2.2.0"
transformers = "^4.40.0"

# Task Scheduling
celery = {extras = ["redis"], version = "^5.4.0"}

# Model Registry
mlflow = "^2.13.0"

# Utilities
python-dotenv = "^1.0.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
jupyter = "^1.0.0"
black = "^24.4.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"